Fix jumpy modals.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -28,3 +28,7 @@ button:active, button:focus {
     background-color: rgba(0, 0, 0, 0.3);
     opacity: 1 !important;
 }
+
+body {
+    overflow-y: auto !important;
+}
